sfahe aval takmil

--- a/zhiarsoft/index.html
+++ b/zhiarsoft/index.html
@@ -865,7 +865,7 @@
                 <div class="col-sm-4 hidden_xs"></div>
 
                 <div class="col-sm-4 col-xs-12">
-                    <h5>آخرین مقالات</h5>
+                    <h5>آدرس و شماره تلفن</h5>
                     <p dir="rtl">:آدرس</p>
                     <p dir="rtl">کردستان - بانه - خیابان صلاح الدین شمالی - ساختمان آفتاب درخشان - طبقه 4 شرکت ژیار سافت
                     </p>
