--- a/zhiarsoft/index3.html
+++ b/zhiarsoft/index3.html
@@ -20,6 +20,7 @@
 
     <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="window.slider.css"/>
+    <link href="window.slider.js" rel="stylesheet" />
     <script src="static/jquery/jquery-1.9.0.min.js"></script>
     <style>
             body { background-color: #fafafa; }
