--- a/zhiarsoft/index2.html
+++ b/zhiarsoft/index2.html
@@ -18,7 +18,7 @@
     <link href="static/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
 
-    <link href="static/slider/themes/default/default.css" rel="styleheet" />
+    <link href="static/slider/themes/default/default.css" rel="stylesheet" />
     <link href="static/slider/nivo-slider.css" rel="stylesheet" />
     <script src="static/jquery/jquery-1.9.0.min.js"></script>
     <script src="static/slider/jquery.nivo.slider.js"></script>
@@ -27,12 +27,10 @@
         $(document).ready(function () {
             $('#slider').nivoSlider({ 
                 controlNav:false,
-                directionNav:false,
                 pauseOnHover:false,
             });
         });
     </script>
-
 
 </head>
 
@@ -136,6 +134,7 @@
         <!-- ::after -->
     </nav>
 <div class="clear"></div>
+<div class="container">
     <div class="slider-wrapper  hidden_xs">
         <div id="slider" class="nivoSlider theme-default">
             <a class="nivo-imagelink" href="#">
@@ -149,6 +148,7 @@
             </a>
         </div>
     </div>
+</div>
 
     <div class="main-container container">
         <!-- ::before -->
