--- a/store/index3.html
+++ b/store/index3.html
@@ -123,19 +123,64 @@
                     <div class="all-category col-sm-3 col-xs-12">
                         <a href="#"><strong>دسته بندی کالا</strong></a>
                     </div>
-                    
-                    <div class="col-sm-9 col-xs-12">
-                        
+
+                    <div class="bottom2 col-sm-7 col-xs-12">
+                        <div class="search-header-w">
+                            <div class="icon-search hidden-lg hidden-md hidden-sm"><i class="fa fa-search"></i></div>
+
+                            <div id="sosearchpro" class="sosearchpro-wrapper so-search ">
+
+
+                                <form method="GET" action="index.php">
+                                    <div id="search0" class="search input-group form-group">
+
+                                        <div class="select_category filter_type  icon-select hidden-sm hidden-xs">
+                                            <select class="no-border chosen-select" name="category_id">
+                                                <option value="0">دسته بندی کالا ها </option>
+                                                <option value="24 ">لوازم تزئینی </option>
+                                                <option value="76">تلفن همراه </option>
+                                                <option value="85">لوازم آرایشی </option>
+                                                <option value="74">لوازم الکترونیکی </option>
+                                                <option value="75">کیف دستی </option>
+                                                <option value="84">جواهرات </option>
+                                                <option value="83">تلویزیون های هوشمند </option>
+                                                <option value="57 ">کلکسیون </option>
+                                                <option value="81">اپلیکیشن ها </option>
+                                                <option value="78">مد </option>
+                                                <option value="80">دکوراسیون </option>
+                                                <option value="82">سینگین </option>
+                                                <option value="77">گوشی های هوشمند </option>
+                                                <option value="79">ورزشی </option>
+                                                <option value="143 ">آرایشی </option>
+                                                <option value="44">کیف </option>
+                                                <option value="39">لباس مردانه </option>
+                                                <option value="48">کفض </option>
+                                                <option value="38">ساعت </option>
+                                                <option value="37">لباس زنانه </option>
+                                                <option value="67">حمام </option>
+                                                <option value="26">اتاق نشیمن </option>
+                                                <option value="59">اپل </option>
+                                            </select>
+                                        </div>
+
+                                        <input class="autosearch-input form-control" type="text" value="" size="50"
+                                            autocomplete="off" placeholder="Search" name="search">
+                                        <span class="input-group-btn">
+                                            <button type="submit" class="button-search btn btn-default btn-lg"
+                                                name="submit_search"><i class="fa fa-search"></i> </button>
+                                        </span>
+                                    </div>
+
+
+                                    <input type="hidden" name="route" value="product/search" />
+                                </form>
+                            </div>
+
+                        </div>
                     </div>
-
-
-
-
                 </div>
             </div>
-        </div>
 
-    </div>
 </body>
 
 </html>
