--- a/store/index10.html
+++ b/store/index10.html
@@ -1816,11 +1816,11 @@
 
 
                 <span class="slick-append">
-                        <button class="btn-next" style="margin-left:5px;display: inline-block;"
+                        <button class="btn-next" style="margin-left:0px;display: inline-block;position: absolute;left: 920px;top: 120px;"
                             type="button">
                             <i class="fa fa-angle-right" style="color:#ccc;"></i>
                         </button>
-                        <button class="btn-prev" style="margin-left:5px;display: inline-block;"
+                        <button class="btn-prev" style="margin-left:5px;display: inline-block;position: absolute;top: 120px;right: 10px;"
                             type="button">
                             <i class="fa fa-angle-left" style="color:#ccc;"></i>
                         </button>
@@ -2005,11 +2005,11 @@
                         
 
                             <span class="slick-append">
-                                <button class="btn-next2" style="margin-left:5px;display: inline-block;"
+                                <button class="btn-next2" style="margin-left:5px;display: inline-block;position: absolute;left: 915px;top: 130px;"
                                     type="button">
                                     <i class="fa fa-angle-right" style="color:#ccc;"></i>
                                 </button>
-                                <button class="btn-prev2" style="margin-left:5px;display: inline-block;"
+                                <button class="btn-prev2" style="margin-left:5px;display: inline-block;position: absolute;right: 10px;top: 130px;"
                                     type="button">
                                     <i class="fa fa-angle-left" style="color:#ccc;"></i>
                                 </button>
@@ -2246,7 +2246,7 @@
 
 <li style="margin-left: 320px;margin-right:0px;"> <h3 class="modtitle" style="display: inline"><span>محصولات جدید</span></h3></li>
 <li>
-    <a href="#"> همه</a>
+    <a href="#"> محصولات</a>
 </li>
 <li>
     <a href="#">حمام</a>
@@ -2261,7 +2261,7 @@
     <a href="#">مبل</a>
 </li>
 <li>
-    <a href="#">وسایل اتاق پذیرایی</a>
+    <a href="#">اتاق نشیمن  </a>
 </li>
 
 </ul>
