edite header va middle menu

--- a/store/index10.html
+++ b/store/index10.html
@@ -429,7 +429,7 @@
                                             <b class="caret"></b>
                                         </a>
 
-                                        <div class="mega-menu">
+                                        <div class="mega-menu" style="width: 400px;">
                                             <div class="menu-page">
 
                                                 <div class="col-sm-6 col-xs-12">
@@ -537,7 +537,7 @@
 
         <div class="header-bottom hidden-compact">
             <div class="container">
-                <div class="row" style="margin-top: 30px;">
+                <div class="row" style="margin-top: 20px;">
                     <div class="all-category col-sm-3 col-xs-12">
                         <a href="#"><strong>دسته بندی کالا</strong></a>
                     </div>
@@ -1847,33 +1847,34 @@
                     
                         <div class="menu-link">
                                 <div class="container">
+<div class="row">
                                     <ul class="middle-menu">
 
                            <li style="margin-left: 300px;margin-right:0px;"> <h3 class="modtitle" style="display: inline"><span>محصولات مد روز</span></h3></li>
                             <li>
-                                <a href="#"> همه محصولات</a>
+                                <a href="#"><span> همه محصولات</span></a>
                             </li>
                             <li>
-                                <a href="#">حمام</a>
+                                <a href="#"><span>حمام</span></a>
                             </li>
                             <li>
-                                <a href="#">اتاق خواب</a>
+                                <a href="#"><span>اتاق خواب</span></a>
                             </li>
                             <li>
-                                <a href="#">دکوراسیون</a>
+                                <a href="#"><span>دکوراسیون</span></a>
                             </li>
                             <li>
-                                <a href="#">مبل</a>
+                                <a href="#"><span>مبل</span></a>
                             </li>
                             <li>
-                                <a href="#">اتاق نشیمن</a>
+                                <a href="#"><span>اتاق نشیمن</span></a>
                             </li>
 
                         </ul>
                     </div>
                 </div>
 
-
+                        </div>
 
                 <span class="slick-append">
                         <button class="btn-next" style="margin-left:0px;display: inline-block;position: absolute;left: 920px;top: 120px;"
@@ -2302,34 +2303,35 @@
 
 <div class="menu-link">
     <div class="container">
+        <div class="row">
         <ul class="middle-menu">
 
 <li style="margin-left: 320px;margin-right:0px;"> <h3 class="modtitle" style="display: inline"><span>محصولات جدید</span></h3></li>
 <li>
-    <a href="#"> محصولات</a>
-</li>
-<li>
-    <a href="#">حمام</a>
-</li>
-<li>
-    <a href="#">اتاق خواب</a>
-</li>
-<li>
-    <a href="#">دکوراسیون</a>
-</li>
-<li>
-    <a href="#">مبل</a>
-</li>
-<li>
-    <a href="#">اتاق نشیمن  </a>
-</li>
+        <a href="#"><span> همه محصولات</span></a>
+    </li>
+    <li>
+        <a href="#"><span>حمام</span></a>
+    </li>
+    <li>
+        <a href="#"><span>اتاق خواب</span></a>
+    </li>
+    <li>
+        <a href="#"><span>دکوراسیون</span></a>
+    </li>
+    <li>
+        <a href="#"><span>مبل</span></a>
+    </li>
+    <li>
+        <a href="#"><span>اتاق نشیمن</span></a>
+    </li>
 
 </ul>
 </div>
 </div>
 
 
-
+</div>
 
 
 
@@ -2447,6 +2449,7 @@
 </div>    
 </div>
 </div>
+                </div>
                 </div></div>
 <div class="clear" style="height: 50px"></div>
 
