--- a/store/index10.html
+++ b/store/index10.html
@@ -115,11 +115,34 @@
 
                 <div class="row">
 
-                    <div class="col-sm-2 col-xs-12">
-                        <div id="logo">
-                            <a href="#" alt="logo"><img class="img-responsive" src="img/logo.jpg" /></a>
-                        </div>
-                    </div>
+                        <div class="middle-right col-sm-3">
+                                <div class="signin-w font-title hidden-sm hidden-xs">
+                                    <ul class="signin-link">
+                                        <li class="log login">
+                                            <i class="fa fa-lock">
+                                            </i>
+                                            <a class="link-lg"
+                                                href="http://opencart.opencartworks.com/themes/so_emarket/index.php?route=account/login ">ورود
+                                            </a>
+                                            / <a
+                                                href="http://opencart.opencartworks.com/themes/so_emarket/index.php?route=account/register">ثبت
+                                                نام</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="telephone hidden-xs hidden-sm hidden-md">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-phone-square">
+                                                </i>
+                                                تلفن:08734263901
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+        
 
                     <div class="main-menu col-sm-7 col-xs-12">
                         <div class="header-link">
@@ -502,33 +525,11 @@
                         </div>
                     </div>
 
-                    <div class="middle-left col-sm-3">
-                        <div class="signin-w font-title hidden-sm hidden-xs">
-                            <ul class="signin-link">
-                                <li class="log login">
-                                    <i class="fa fa-lock">
-                                    </i>
-                                    <a class="link-lg"
-                                        href="http://opencart.opencartworks.com/themes/so_emarket/index.php?route=account/login ">ورود
-                                    </a>
-                                    / <a
-                                        href="http://opencart.opencartworks.com/themes/so_emarket/index.php?route=account/register">ثبت
-                                        نام</a>
-                                </li>
-                            </ul>
+                    <div class="col-sm-2 col-xs-12">
+                            <div id="logo">
+                                <a href="#" alt="logo"><img class="img-responsive" src="img/logo.jpg" /></a>
+                            </div>
                         </div>
-                        <div class="telephone hidden-xs hidden-sm hidden-md">
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-phone-square">
-                                        </i>
-                                        تلفن:08734263901
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
 
 
                 </div>
@@ -549,7 +550,7 @@
 
 
                     <div class="bottom2 col-lg-6 col-md-5 col-sm-6">
-                        <div class="search-header-w" style="margin-right: 30px;">
+                        <div class="search-header-w" style="margin-right: 50px;">
                             <div class="icon-search hidden-lg hidden-md hidden-sm"><i class="fa fa-search"></i></div>
 
                             <div id="sosearchpro" class="sosearchpro-wrapper so-search ">
