--- a/store/index10.html
+++ b/store/index10.html
@@ -538,7 +538,7 @@
 
         <div class="header-bottom hidden-compact">
             <div class="container">
-                <div class="row" style="margin-top: 20px;">
+                <div class="row">
                     <div class="all-category col-sm-3 col-xs-12">
                         <a href="#"><strong>دسته بندی کالا</strong></a>
                     </div>
@@ -814,11 +814,9 @@
 
                 </div>
 
-                <div class="chain col-lg-3 col-md-2 col-sm-3">
+                <div class="chain col-lg-2 col-md-2 col-sm-3">
                     <div class="chain-right">
-                        <i class="fa fa-chain fa-2x"></i>
                     </div>
-                    <div class="chain-left"><i class="fa fa-chain fa-2x"></i></div>
 
                 </div>
             </div>
