--- a/store/index10.html
+++ b/store/index10.html
@@ -985,7 +985,7 @@
 
                         </ul>
                     </div>
-                    <div class="col-sm-12  col-xs-12  pull-right">
+                    <div class="col-sm-12  col-xs-12 banner4 pull-right">
 
                         <a href="#"><img class="banner4" src="img/banner4.jpg" /></a>
 
@@ -1330,8 +1330,10 @@
     </div>
 
     <div class=" col-sm-12 col-xs-12">
-        <img alt="image" src="img/banner5.jpg" sizes="240px" />
+        <div class="banner5">
+        <a href="#"><img alt="image" src="img/banner5.jpg" sizes="240px" /></a>
     </div>
+</div>
 
     <div class=" col-sm-12 col-xs-12 ">
         <div class="clear" style="height: 15px"></div>
@@ -1547,13 +1549,13 @@
             </div>
                 </div>
 
-            <div class="col-sm-3 col-xs-12 ">
+            <div class="col-sm-3 col-xs-12" class="banners1">
 
                 <div class="left-block">
                     <div class="clear" style="height: 50px"></div>
-                    <a href="#"><img src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a>
+                    <a href="#"><img  src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a>
                     <div class="clear" style="height: 15px"></div>
-                    <a href="#"><img src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a>
+                    <a href="#"><img  src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a>
                 </div>
             </div>
 
@@ -2236,7 +2238,7 @@
             <div class="banner1 col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="row">
             <div class="b1">
-            <a href="#"><img src="img/banner8.jpg" style="max-width: 100%;margin-bottom: 10px;" alt="image"></a>
+            <a href="#"><img src="img/banner8.jpg" style="max-width: 100%;margin-bottom: 5px;" alt="image"></a>
             </div>
             <div class="b2">
             <a href="#"><img src="img/banner9.jpg" style="max-width: 100%;" alt="image"></a>
@@ -2251,7 +2253,7 @@
             <div class="banner3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="row">
             <div class="b1">
-            <a href="#"><img src="img/banner11.jpg" style="max-width: 100%;margin-bottom: 10px;" alt="image"></a>
+            <a href="#"><img src="img/banner11.jpg" style="max-width: 100%;margin-bottom: 5px;" alt="image"></a>
             </div>
             <div class="b2">
             <a href="#"><img src="img/banner12.jpg" style="max-width: 100%;" alt="image"></a>
@@ -2702,8 +2704,6 @@
         <a class="sticky-mycart" data-target="popup" data-popup="#popup-mycart"><span>کارت</span><i class="fa fa-shopping-cart"></i></a>
         <a class="sticky-myaccount" data-target="popup" data-popup="#popup-myaccount"><span>حساب کاربری</span><i class="fa fa-user"></i></a>
         <a class="sticky-mysearch" data-target="popup" data-popup="#popup-mysearch"><span>جستجو</span><i class="fa fa-search"></i></a>
-        <a class="sticky-recent" data-target="popup" data-popup="#popup-recent"><span>آخرین بازدید </span><i class="fa fa-recent"></i></a>
-        <a class="sticky-backtop" data-target="scroll" data-scroll="html"><span>برو بالا</span><i class="fa fa-angle-double-up"></i></a>
 
 
 
