--- a/store/index10.html
+++ b/store/index10.html
@@ -1553,9 +1553,11 @@
 
                 <div class="left-block">
                     <div class="clear" style="height: 50px"></div>
-                    <a href="#"><img  src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a>
+                    <div class="banner1">
+                    <a href="#"><img  src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a></div>
                     <div class="clear" style="height: 15px"></div>
-                    <a href="#"><img  src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a>
+                    <div class="banner2">
+                    <a href="#"><img  src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a></div>
                 </div>
             </div>
 
@@ -2246,7 +2248,7 @@
             </div>
             </div>
             
-            <div class="banner2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="banner10 col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <a href="#"><img src="img/banner10.jpg" style="max-width: 100%;" alt="image"></a>
             </div>
             
@@ -2309,7 +2311,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col_0g2s col-style">
     <div class="banners banners8">
 <div class="row">
-<div class="banner1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+<div class="banner11 col-lg-6 col-md-6 col-sm-12 col-xs-12">
 <div class="b1">
 <a href="#"> <span class="label-product label-product-sale">
         22%-</span>
@@ -2317,7 +2319,7 @@
 </div>
 </div>
 
-<div class="banner1 col-lg-2 col-md-2 col-sm-12 col-xs-12">
+<div class="banner11 col-lg-2 col-md-2 col-sm-12 col-xs-12">
     <div class="b1">
     <a href="#"><img src="img/12-270x270.jpg" style="max-width: 100%;" alt="image"></a>
     <div class="product-price">
@@ -2347,7 +2349,7 @@
     </div>
     </div>
 
-    <div class="banner1 col-lg-2 col-md-2 col-sm-12 col-xs-12">
+    <div class="banner11 col-lg-2 col-md-2 col-sm-12 col-xs-12">
         <div class="b1">
         <a href="#"> <span class="label-product label-product-sale">
                 10%-</span>
@@ -2381,7 +2383,7 @@
         </div>
         </div>
 
-        <div class="banner1 col-lg-2 col-md-2 col-sm-12 col-xs-12">
+        <div class="banner11 col-lg-2 col-md-2 col-sm-12 col-xs-12">
             <div class="b1">
             <a href="#"><img src="img/8-270x270.jpg" style="max-width: 100%;" alt="image"></a>
             <div class="product-price">
