--- a/store/index10.html
+++ b/store/index10.html
@@ -832,13 +832,46 @@
                         <ul id="categories">
 
                             <li class="has-sub">
-                                <a href="http://opencart.opencartworks.com/themes/so_emarket/layout12/index.php?route=product/category&amp;path=57"
+                                <a href="#"
                                     class="clearfix">
                                     <strong><i class="fa fa-gift"></i>هدایا و اسباب
                                         بازی</strong>
                                     <b class="fa fa-angle-left"></b>
                                 </a>
-                            </li>
+
+                                <div class="submenu">
+                                    <div class="col-sm-3">
+                                        <ul>
+                                            <li><a href="#" class="main-menu">گوشی هوشمند</a>
+                                                    <li><a href="#">لوازم جانبی</a></li>
+                                                    <li><a href="#">اسکنر</a></li>
+                                                    <li><a href="#">اپل</a></li>
+                                                    <li><a href="#">سامسونگ</a></li>
+                                                    <li><a href="#">شیاومی</a></li>
+                                            </li>
+                                            <li><a href="#" class="main-menu">الکترونیک</a>
+                                                    <li><a href="#">موازم جانبی</a></li>
+                                                    <li><a href="#">تصویری</a></li>
+                                                    <li><a href="#">فیلمبرداری</a></li>
+                                                    <li><a href="#">مانیتور</a></li>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <ul>
+                                            <li><a href="#" class="main-menu"><strong>گوشی هوشمند</strong></a>
+                                                    <li><a href="#">لوازم جانبی</a></li>
+                                                    <li><a href="#">اسکنر</a></li>
+                                                    <li><a href="#">اپل</a></li>
+                                                    <li><a href="#">سامسونگ</a></li>
+                                                    <li><a href="#">شیاومی</a></li>
+                                            </li>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <a href="#"><img src="img/vbanner1.jpg" alt="banner"></a>  
+                                    </div>
+                                </div>
+                </li>
 
                             <li class="has-sub">
                                 <a href="http://opencart.opencartworks.com/themes/so_emarket/layout12/index.php?route=product/category&amp;path=25"
@@ -1586,6 +1619,7 @@
                         </button>
                     </span>
                     <div class="item-product slick-wrapper-sugested">
+                        <div class="item">
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
                                 <a href="#">
@@ -1596,7 +1630,14 @@
 
                                     </div>
                                 </a>
+                                <div class="button-group so-quickview">
+                                        <button class="btn-button addToCart" title="Add to Cart" type="button" onclick="cart.add('69');"><i class="fa fa-shopping-basket"></i> <span>Add to Cart</span></button>
 
+                                        <button class="btn-button wishlist" type="button" title="Add to Wish List" onclick="wishlist.add('69');"><i class="fa fa-heart"></i><span>Add to Wish List</span></button>
+
+                                        <button class="btn-button compare" type="button" title="Compare this Product" onclick="compare.add('69');"><i class="fa fa-refresh"></i><span>Compare this Product</span></button>
+                                    <a class="hidden" data-product='69' href="http://opencart.opencartworks.com/themes/so_emarket/index.php?route=product/product&amp;product_id=69" target="_self" title=" " ></a>
+</div>			
                             </div>
                         </div>
 
@@ -1627,7 +1668,8 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
                         </div>
-
+                        </div>
+<div class="item">
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
 
@@ -1669,6 +1711,8 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>2</b> </p>
                             </div>
                         </div>
+</div>
+<div class="item">
 
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1683,7 +1727,6 @@
 
                             </div>
                         </div>
-
                         <div class="col-sm-3 col-xs-12">
                             <div class="product-info">
                                 <div class="product-title">
@@ -1711,6 +1754,8 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
                         </div>
+</div>
+<div class="item">
 
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1752,6 +1797,9 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>2</b> </p>
                             </div>
                         </div>
+                        
+                        <div class="item">
+
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
                                 <a href="#">
@@ -1793,6 +1841,8 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
                         </div>
+</div>
+<div class="item">
 
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1837,7 +1887,7 @@
 
                     </div>
                         </div>
-
+                        </div>
 
                 <div class="clear" style="height: 45px"></div>
 
@@ -2701,7 +2751,7 @@
 </div>
 
 
-<div id="so-groups" class="right so-groups-sticky hidden-xs" style="top: 0px">
+<div id="so-groups" class="right so-groups-sticky hidden-xs" style="top: -2px">
     <a class="sticky-categories" data-target="popup" data-popup="#popup-categories"><span>دسته بندی کالا</span><i class="fa fa-align-justify"></i></a>
         <a class="sticky-mycart" data-target="popup" data-popup="#popup-mycart"><span>کارت</span><i class="fa fa-shopping-cart"></i></a>
         <a class="sticky-myaccount" data-target="popup" data-popup="#popup-myaccount"><span>حساب کاربری</span><i class="fa fa-user"></i></a>
