Revert "atkmile hover banner"
This reverts commit 9d2e15b2ff6343726c0e2ee091b4b17f84cd051d.

--- a/store/index10.html
+++ b/store/index10.html
@@ -1586,11 +1586,9 @@
 
                 <div class="left-block">
                     <div class="clear" style="height: 50px"></div>
-                    <div class="banner1">
-                    <a href="#"><img  src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a></div>
+                    <a href="#"><img  src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a>
                     <div class="clear" style="height: 15px"></div>
-                    <div class="banner2">
-                    <a href="#"><img  src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a></div>
+                    <a href="#"><img  src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a>
                 </div>
             </div>
 
@@ -2298,7 +2296,7 @@
             </div>
             </div>
             
-            <div class="banner10 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="banner2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <a href="#"><img src="img/banner10.jpg" style="max-width: 100%;" alt="image"></a>
             </div>
             
@@ -2361,7 +2359,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col_0g2s col-style">
     <div class="banners banners8">
 <div class="row">
-<div class="banner11 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+<div class="banner1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
 <div class="b1">
 <a href="#"> <span class="label-product label-product-sale">
         22%-</span>
@@ -2369,7 +2367,7 @@
 </div>
 </div>
 
-<div class="banner11 col-lg-2 col-md-2 col-sm-12 col-xs-12">
+<div class="banner1 col-lg-2 col-md-2 col-sm-12 col-xs-12">
     <div class="b1">
     <a href="#"><img src="img/12-270x270.jpg" style="max-width: 100%;" alt="image"></a>
     <div class="product-price">
@@ -2399,7 +2397,7 @@
     </div>
     </div>
 
-    <div class="banner11 col-lg-2 col-md-2 col-sm-12 col-xs-12">
+    <div class="banner1 col-lg-2 col-md-2 col-sm-12 col-xs-12">
         <div class="b1">
         <a href="#"> <span class="label-product label-product-sale">
                 10%-</span>
@@ -2433,7 +2431,7 @@
         </div>
         </div>
 
-        <div class="banner11 col-lg-2 col-md-2 col-sm-12 col-xs-12">
+        <div class="banner1 col-lg-2 col-md-2 col-sm-12 col-xs-12">
             <div class="b1">
             <a href="#"><img src="img/8-270x270.jpg" style="max-width: 100%;" alt="image"></a>
             <div class="product-price">
