--- a/store/index10.html
+++ b/store/index10.html
@@ -859,7 +859,7 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <ul>
-                                            <li><a href="#" class="main-menu"><strong>گوشی هوشمند</strong></a>
+                                            <li><a href="#" class="main-menu">گوشی هوشمند</a>
                                                     <li><a href="#">لوازم جانبی</a></li>
                                                     <li><a href="#">اسکنر</a></li>
                                                     <li><a href="#">اپل</a></li>
@@ -868,7 +868,9 @@
                                             </li>
                                     </div>
                                     <div class="col-sm-6">
-                                        <a href="#"><img src="img/vbanner1.jpg" alt="banner"></a>  
+                                        <div class="row">
+                                        <a href="#" class="vbanner"><img  src="img/vbanner1.jpg" alt="banner"></a>  
+                                    </div>
                                     </div>
                                 </div>
                 </li>
@@ -911,7 +913,8 @@
                                     <strong><i class="fa fa-bath"></i>حمام</strong>
                                     <b class="fa fa-angle-left"></b>
                                 </a>
-                                <ul>
+                                
+                                <!-- <ul>
                                     <li>
                                     <a href="/category-36"> <b class="fa fa-angle-left"></b>حوله</a>
 
@@ -968,7 +971,7 @@
                                     <a href="/category-3053"> تهویه </a>
                                     </li>
                                     </ul>
-
+ -->
 
                             </li>
 
@@ -1617,7 +1620,6 @@
                         </button>
                     </span>
                     <div class="item-product slick-wrapper-sugested">
-                        <div class="item">
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
                                 <a href="#">
@@ -1628,14 +1630,6 @@
 
                                     </div>
                                 </a>
-                                <div class="button-group so-quickview">
-                                        <button class="btn-button addToCart" title="Add to Cart" type="button" onclick="cart.add('69');"><i class="fa fa-shopping-basket"></i> <span>Add to Cart</span></button>
-
-                                        <button class="btn-button wishlist" type="button" title="Add to Wish List" onclick="wishlist.add('69');"><i class="fa fa-heart"></i><span>Add to Wish List</span></button>
-
-                                        <button class="btn-button compare" type="button" title="Compare this Product" onclick="compare.add('69');"><i class="fa fa-refresh"></i><span>Compare this Product</span></button>
-                                    <a class="hidden" data-product='69' href="http://opencart.opencartworks.com/themes/so_emarket/index.php?route=product/product&amp;product_id=69" target="_self" title=" " ></a>
-</div>			
                             </div>
                         </div>
 
@@ -1666,8 +1660,6 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
                         </div>
-                        </div>
-<div class="item">
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
 
@@ -1709,8 +1701,6 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>2</b> </p>
                             </div>
                         </div>
-</div>
-<div class="item">
 
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1752,8 +1742,6 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
                         </div>
-</div>
-<div class="item">
 
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1796,7 +1784,6 @@
                             </div>
                         </div>
                         
-                        <div class="item">
 
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1839,8 +1826,6 @@
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
                         </div>
-</div>
-<div class="item">
 
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1884,7 +1869,6 @@
                         </div>
 
                     </div>
-                        </div>
                         </div>
 
                 <div class="clear" style="height: 45px"></div>
